# nsec-walker

./: LICENSE  README.md  setup.cfg
nsecwalker/: cli.py  error.py  query.py
