[metadata]
name = nsecwalker
version = attr: nsecwalker.VERSION
author = Kyle Laker
author_email = kyle@laker.email
url = https://github.com/kylelaker/nsec-walker
description = Walks the NSEC records under a zone
long_description = file: README.md
license = MIT

[options]
packages = find:
install_requires =
    click
    dnspython

[options.entry_points]
console_scripts =
    nsec-walker = nsecwalker.cli:main